fix advanced options overlap

--- a/src/game/board/view/LocalGameOptions.scss
+++ b/src/game/board/view/LocalGameOptions.scss
@@ -96,7 +96,8 @@
     white-space: nowrap;
     input {
       transform: scale(2) translate(0,-2px);
-      margin-left: 0.7em;
+      margin-left: 1.5em;
+      width: 2em;
     }
   }
 
